--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ li {
     width: 70px;
     min-width: 70px;
     z-index: 1000;
-    transition: all .25s ease-in-out;
+    transition: all 0.25s ease-in-out;
     background-color: #0e2238;
     display: flex;
     flex-direction: column;
@@ -106,7 +106,7 @@ li {
 
 .toggle-btn i {
     font-size: 1.5rem;
-    color: #FFF;
+    color: #fff;
 }
 
 .sidebar-logo {
@@ -114,7 +114,7 @@ li {
 }
 
 .sidebar-logo a {
-    color: #FFF;
+    color: #fff;
     font-size: 1.15rem;
     font-weight: 600;
 }
@@ -126,7 +126,7 @@ li {
 
 #sidebar.expand .sidebar-logo,
 #sidebar.expand a.sidebar-link span {
-    animation: fadeIn .25s ease;
+    animation: fadeIn 0.25s ease;
 }
 
 @keyframes fadeIn {
@@ -145,8 +145,8 @@ li {
 }
 
 a.sidebar-link {
-    padding: .625rem 1.625rem;
-    color: #FFF;
+    padding: 0.625rem 1.625rem;
+    color: #fff;
     display: block;
     font-size: 0.9rem;
     white-space: nowrap;
@@ -156,11 +156,11 @@ a.sidebar-link {
 .sidebar-link i,
 .dropdown-item i {
     font-size: 1.1rem;
-    margin-right: .75rem;
+    margin-right: 0.75rem;
 }
 
 a.sidebar-link:hover {
-    background-color: rgba(255, 255, 255, .075);
+    background-color: rgba(255, 255, 255, 0.075);
     border-left: 3px solid #3b7ddd;
 }
 
@@ -178,7 +178,7 @@ a.sidebar-link:hover {
     display: none;
 }
 
-#sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
+#sidebar:not(.expand) .sidebar-item:hover .has-dropdown + .sidebar-dropdown {
     display: block;
     max-height: 15em;
     width: 100%;
@@ -187,7 +187,7 @@ a.sidebar-link:hover {
 
 #sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
     border: solid;
-    border-width: 0 .075rem .075rem 0;
+    border-width: 0 0.075rem 0.075rem 0;
     content: "";
     display: inline-block;
     padding: 2px;
@@ -195,17 +195,17 @@ a.sidebar-link:hover {
     right: 1.5rem;
     top: 1.4rem;
     transform: rotate(-135deg);
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
 }
 
 #sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
     transform: rotate(45deg);
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
 }
 
 .navbar {
     background-color: #f5f5f5;
-    box-shadow: 0 0 2rem 0 rgba(33, 37, 41, .1);
+    box-shadow: 0 0 2rem 0 rgba(33, 37, 41, 0.1);
 }
 
 .navbar-expand .navbar-collapse {
@@ -216,11 +216,6 @@ a.sidebar-link:hover {
     height: 40px;
     width: 40px;
 }
-
-
-
-@media (min-width: 768px) {}
-
 
 /*------------ For small screens------------*/
 @media only screen and (max-width: 768px) {
